--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Dendorgrama Lineal
+title: Visualitzacions PAC2
 description: PAC2 de l'assignatura Visualització de dades del Màster de Ciència de Dades de la UOC.
 author: Guillem Pla Bertran
 
